# LePIC2.0

./: .fortls  CMakeLists.txt  README.md  config  config.sh  runPIC.sh  run_pic3D
Inputs/: conditions.inp  geometry.inp
Inputs/NewInputs/: .deuterium.dat.swp  boundary.inp  conditions.inp  geometry.inp  magnetic_field.inp
Outputs/: particles.out
Utils/: CMakeLists_gfortran.txt  CMakeLists_ifort.txt  CMakeLists_ifx.txt  PathSimulation.txt  SetupGUI.py  env-intelmpi.sh  env-openmpi.sh
Visualization/: plot3d.py  rotate3D.py
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-debug/mod/: mod_geometry.mod  mod_grid.mod  mod_intro.mod  mod_io_hdf5.mod  mod_magneticfield.mod  mod_particles.mod  mod_signals.mod  mod_timer.mod  mod_timer@submod_timer.smod
src/: main.f90
src/modules/domain/: mod_boundary.f90  mod_geometry.f90  mod_geometry.mod
src/modules/field/: mod_MagneticField.f90  mod_field_scalars.f90  mod_field_vectors.f90  mod_grid.f90
src/modules/particles/: mod_collisions.f90  mod_particles.f90  mod_reactions.f90
src/modules/simulation/: mod_pic.f90
src/modules/utils/: mod_InputFiles.f90  mod_constants.f90  mod_constants.mod  mod_end.f90  mod_functionsText.f90  mod_functionstext.mod  mod_inputfiles.mod  mod_intro.f90  mod_intro.mod  mod_io_hdf5.f90  mod_physicsFunctions.f90  mod_physicsfunctions.mod  mod_signals.mod  mod_timer.f90  mod_timer.mod
src/submodules/utils/: submod_timer.f90
